# teatree

./: AUTHORS  CMakeLists.txt  README  config.h.cmake
cmake/: MacroEnsureVersion.cmake  OptimizeForArchitecture.cmake
src/: available_simulations.hpp  teatree.cpp
src/accel/: eval.hpp  open.hpp
src/constraint/: open.hpp  reflective.hpp
src/efield/: base.hpp  plummer.hpp
src/efield/moments/: moments_2d.hpp  moments_3d.hpp  recurse.hpp
src/mac/: base.hpp  min_dist.hpp  opening_angle.hpp
src/particle/: make_pseudo_particle.hpp  moments.hpp  moments_visitor.hpp  particle.hpp  partition.hpp  pseudo_particle.hpp  pseudo_particle_visitor.hpp  typedefs.hpp
src/particle/detail/: moments_recurse.hpp  moments_recurse_2d.hpp  moments_recurse_3d.hpp
src/particle/moments/: moments.hpp  shift.hpp  shift_2d.hpp  shift_3d.hpp  shift_recurse.hpp  traits.hpp  visitor.hpp
src/pusher/: base.hpp  verlet.hpp
src/pusher/comp/: 21.hpp  43.hpp  67.hpp  base.hpp
src/simulation/: impl.hpp  open.hpp  options.hpp  particle_filter.hpp  progress.hpp  reflective.hpp  simulation.hpp  traits.hpp
src/tree/: branch.hpp  leaf.hpp  node.hpp  visitor.hpp
src/utils/: aligned_pool_allocator.hpp  eigen_addons.hpp  ipow.hpp  name_traits.hpp  openmp.hpp  pool_object.hpp  serialise_eigen.hpp  signals_max_combiner.hpp  simulation_options.hpp  vector_traits.hpp
tests/: fields.cpp  pusher.cpp  serialisation.cpp  serialization.cpp  tree.cpp
